kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__subscript_recovery_9.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 93
expression: "crate::tests::parsing_expr_string(r#\"[]?[]\"#)"
---
Node {
    node: Subscript(
        Subscript {
            value: Node {
                node: List(
                    ListExpr {
                        elts: [],
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 2,
            },
            index: None,
            lower: None,
            upper: None,
            step: None,
            ctx: Load,
            has_question: true,
        },
    ),
    filename: "",
    line: 1,
    column: 2,
    end_line: 1,
    end_column: 5,
}

