kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__type_alias_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"type\"#)"
---
Module {
    filename: "",
    doc: None,
    name: "",
    body: [
        Node {
            node: TypeAlias(
                TypeAliasStmt {
                    type_name: Node {
                        node: Identifier {
                            names: [],
                            pkgpath: "",
                            ctx: Load,
                        },
                        filename: "",
                        line: 1,
                        column: 4,
                        end_line: 1,
                        end_column: 4,
                    },
                    type_value: Node {
                        node: "any",
                        filename: "",
                        line: 1,
                        column: 4,
                        end_line: 1,
                        end_column: 4,
                    },
                    ty: Node {
                        node: Any,
                        filename: "",
                        line: 1,
                        column: 4,
                        end_line: 1,
                        end_column: 4,
                    },
                },
            ),
            filename: "",
            line: 1,
            column: 4,
            end_line: 1,
            end_column: 4,
        },
    ],
    comments: [],
}
